# bitset

./: CMakeLists.txt  build.sh  readme.txt
src/: CMakeLists.txt  avx512.cpp  avx512.h  bitset.h  bitset2.h  common.h
src/detail/: bit_wise.h  ctz.h  element_vectorized.h  element_wise.h  maybe_vector.h  popcount.h  proxy.h
src/detail/platform/: dynamic.cpp  dynamic.h  vectorized_ref.h
src/detail/platform/arm/: common.h  instruction_set.cpp  instruction_set.h  neon-decl.h  neon-impl.h  neon-inst.cpp  neon.cpp  neon.h  sve-decl.h  sve-impl.h  sve-inst.cpp  sve.cpp  sve.h
src/detail/platform/x86/: avx2-decl.h  avx2-impl.h  avx2-inst.cpp  avx2.cpp  avx2.h  avx512-decl.h  avx512-impl.h  avx512-inst.cpp  avx512.cpp  avx512.h  common.h  instruction_set.cpp  instruction_set.h
tests/: CMakeLists.txt  test_avx512.cpp  test_functionality.cpp  utils.h
